Add a missing include to translation_unit - required after the roll to clang r277962.

BUG=637317
TBR=thakis

Review URL: https://codereview.chromium.org/2248583002 .

Cr-Commit-Position: refs/heads/master@{#411938}

Former-commit-id: f44c5e7a7d5f7a592ea8bd1750789d51c09cd344